Bug 1555281 - Fix intermittent-failures.html truncated failure message
* increase the size of the tooltip for longer failure message
 when window is wide

* remove the path to the test in test name and
 show only the test name before the actual message

--- a/ui/css/intermittent-failures.css
+++ b/ui/css/intermittent-failures.css
@@ -67,6 +67,7 @@ ul {
 
 .failure_li {
   max-width: 800px;
+  max-width: 76vw;
   list-style-type: none;
   text-align: left;
 }
